page(load): drag and drop remove files

--- a/src/Components/FilesTable/FilesTable.scss
+++ b/src/Components/FilesTable/FilesTable.scss
@@ -1,7 +1,10 @@
-.FilesTable-Item {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    margin: 5px;
-    border-radius: 20px;
+.FilesTable {
+    display: flex;
+    flex-wrap: wrap;
+
+    &-Item {
+        width: 100px;
+        height: 100px;
+        margin: 5px;
+    }
 }
