--- a/src/Pages/SelectFaces/SelectFaces.scss
+++ b/src/Pages/SelectFaces/SelectFaces.scss
@@ -4,6 +4,11 @@
         left: 15px;
     }
 
+    &-List {
+        margin-left: 200px;
+        margin-right: 200px;
+    }
+
     &-Select {
         position: fixed;
         bottom: 10px;
