--- a/src/Components/MessageWrapper/MessageWrapper.scss
+++ b/src/Components/MessageWrapper/MessageWrapper.scss
@@ -6,5 +6,6 @@
     overflow: hidden;
     display: flex;
     flex-direction: column-reverse;
-    gap: 10px
+    gap: 10px;
+    overflow: hidden;
 }
