--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,3 +1,5 @@
-body {
-    margin: 0;
+@import url('https://fonts.googleapis.com/css2?family=Bona+Nova&family=Roboto+Slab&display=swap');
+
+#root {
+    font-family: 'Roboto Slab', serif;
 }
