--- a/src/Components/DragAndDropZone/DragAndDropZone.scss
+++ b/src/Components/DragAndDropZone/DragAndDropZone.scss
@@ -1,15 +1,19 @@
 .DragAndDropZone {
     border-radius: 30px;
     border: 2px dotted black;
-    padding: 20px;
+    position: relative;
 
+    &-Active,
     &-Idle {
         width: 100%;
         height: 100%;
+        z-index: 1;
     }
 
-    &-Active {
-        width: 100%;
-        height: 100%;
+    &-Preview {
+        box-sizing: border-box;
+        padding: 20px;
+        position: absolute;
+        inset: 0;
     }
 }
