--- a/src/Components/DragAndDropZoneIdle/DragAndDropZoneIdle.scss
+++ b/src/Components/DragAndDropZoneIdle/DragAndDropZoneIdle.scss
@@ -1,4 +1,10 @@
 .DragAndDropZoneIdle {
-    width: 100%;
-    height: 100%;
+    font-size: 20px;
+    position: relative;
+
+    &-Text {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+    }
 }
