--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -1,6 +1,7 @@
 .Button {
     cursor: pointer;
     transition: background-color .5s;
+    position: relative;
 
     &_type_default {
         font-size: 24px;
@@ -18,6 +19,12 @@
 
     &_isLoading {
         cursor: default;
+    }
+
+    .Loading {
+        top: 0;
+        right: 46px;
+        position: absolute;
     }
 }
 
