--- a/src/Pages/SelectFaces/SelectFaces.scss
+++ b/src/Pages/SelectFaces/SelectFaces.scss
@@ -12,8 +12,7 @@
     &-Select {
         position: fixed;
         bottom: 10px;
-        right: 0;
-        left: 0;
         margin: auto;
+        right: calc(50% - 65px)
     }
 }
