--- a/src/Components/FilesListItem/FilesListItem.scss
+++ b/src/Components/FilesListItem/FilesListItem.scss
@@ -4,6 +4,9 @@
     &-Image {
         width: 100%;
         height: 100%;
+        box-sizing: border-box;
+        border-radius: 20px;
+        border: black 2px solid;
     }
 
     &-Canvas {
