--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -16,7 +16,8 @@
         border: solid black 2px;
         border-radius: 10px;
         padding: 5px 10px;
-        background-color: royalblue;
+        background-color: rgb(255, 108, 0);
+        color: white;
     }
 
     &_type_close {
@@ -48,7 +49,7 @@
         }
 
         &_type_accent:hover {
-            background-color: blue;
+            background-color: rgb(203, 16, 0);
         }
     }
 }
