--- a/src/Pages/Results/Results.scss
+++ b/src/Pages/Results/Results.scss
@@ -1,6 +1,6 @@
 .Results {
     &-Back {
-        position: absolute;
+        position: fixed;
         left: 15px;
     }
 
@@ -12,21 +12,16 @@
         width: 70%;
         margin-left: auto;
         margin-right: auto;
+        margin-top: 50px;
+        text-align: center;
+        font-size: 26px;
+    }
 
-        div {
-            margin-top: 30px;
-            text-align: center;
-            margin-bottom: 10px;
-            font-size: 26px;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
+    &-Image {
+        margin-bottom: 30px;
 
         img {
-            width: 100%;
-            box-sizing: border-box;
-            border-radius: 20px;
-            border: black 2px solid;
+            margin-top: 10px;
         }
     }
 }
