--- a/src/Components/FilesListItem/FilesListItem.scss
+++ b/src/Components/FilesListItem/FilesListItem.scss
@@ -1,6 +1,13 @@
 .FilesListItem {
     position: relative;
 
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
     &-Image {
         width: 100%;
         height: 100%;
