--- a/src/Components/FilesTableItem/FilesTableItem.scss
+++ b/src/Components/FilesTableItem/FilesTableItem.scss
@@ -1,6 +1,13 @@
 .FilesTableItem {
     position: relative;
 
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
     &-Cross {
         position: absolute;
         top: 0;
