--- a/src/Pages/SelectFaces/SelectFaces.scss
+++ b/src/Pages/SelectFaces/SelectFaces.scss
@@ -16,3 +16,13 @@
         right: calc(50% - 65px)
     }
 }
+
+@media screen and (max-width: 500px) {
+    .SelectFaces {
+        &-List {
+            margin-left: 5px;
+            margin-right: 5px;
+        }
+    }
+
+}
