--- a/src/Components/FilesTableItem/FilesTableItem.scss
+++ b/src/Components/FilesTableItem/FilesTableItem.scss
@@ -1,5 +1,6 @@
 .FilesTableItem {
     position: relative;
+    display: inline-block;
 
     -webkit-touch-callout: none;
     -webkit-user-select: none;
