--- a/src/Components/FilesTable/FilesTable.scss
+++ b/src/Components/FilesTable/FilesTable.scss
@@ -3,8 +3,22 @@
     overflow: hidden;
 
     &-Item {
+        position: relative;
+        display: inline-block;
         width: 100px;
         height: 100px;
         margin: 5px;
+    }
+    
+    &-Placeholder {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 20px;
+        cursor: pointer;
+    }
+
+    &-Input {
+        display: none;
     }
 }
