section(load): images placeholders

--- a/src/Components/LoadSection/LoadSection.scss
+++ b/src/Components/LoadSection/LoadSection.scss
@@ -5,4 +5,9 @@
         margin: auto;
         margin-top: 20px;
     }
+
+    &-Para {
+        text-align: center;
+        font-size: 18px;
+    }
 }
