section(load): overflow auto

--- a/src/Components/SelectSection/SelectSection.scss
+++ b/src/Components/SelectSection/SelectSection.scss
@@ -5,9 +5,9 @@
     }
 
     &-List {
+        margin: auto;
         margin-top: 20px;
-        margin-left: 200px;
-        margin-right: 200px;
+        width: 40%;
     }
 
     &-Select {
