--- a/src/Components/FilesTable/FilesTable.scss
+++ b/src/Components/FilesTable/FilesTable.scss
@@ -9,13 +9,25 @@
         height: 100px;
         margin: 5px;
     }
-    
+
     &-Placeholder {
         width: 100%;
         height: 100%;
         object-fit: cover;
         border-radius: 20px;
+        position: relative;
+        display: inline-block;
         cursor: pointer;
+    }
+
+    &-AddImage:hover {
+        filter: brightness(80%);
+        -webkit-filter: brightness(80%);
+        -webkit-transition: all .5s ease;
+        -moz-transition: all .5s ease;
+        -o-transition: all .5s ease;
+        -ms-transition: all .5s ease;
+        transition: all .5s ease;
     }
 
     &-Input {
