load: images gallery

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -24,4 +24,9 @@ body {
     &-Select {
         margin-top: 40px;
     }
+
+    &-Span {
+        text-align: center;
+        font-size: 26px;
+    }
 }
