--- a/src/Components/DragAndDrop/DragAndDrop.scss
+++ b/src/Components/DragAndDrop/DragAndDrop.scss
@@ -1,6 +1,6 @@
 .DragAndDropZone {
     background-color: rgba($color: #000000, $alpha: .8);
-    position: absolute;
+    position: fixed;
     inset: 0;
 
     &-Border {
