load: upload button

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -29,4 +29,9 @@ body {
         text-align: center;
         font-size: 26px;
     }
+
+    &-Upload {
+        width: 200px;
+        margin: 0 auto;
+    }
 }
