--- a/src/Components/Image/Image.scss
+++ b/src/Components/Image/Image.scss
@@ -14,6 +14,7 @@
         box-sizing: border-box;
         border-radius: 20px;
         border: black 2px solid;
+        box-sizing: border-box;
     }
 
     &-Canvas {
