--- a/src/Components/Table/Table.scss
+++ b/src/Components/Table/Table.scss
@@ -1,10 +1,9 @@
 .Table {
     margin: auto;
-    width: 700px;
-    height: 700px;
+    width: 100%;
+    height: 100%;
 
     &-Canvas {
-        border: 2px black solid;
         border-radius: 20px;
     }
 }
