--- a/src/Components/Widget/Widget.scss
+++ b/src/Components/Widget/Widget.scss
@@ -17,8 +17,15 @@
         justify-content: space-between;
         align-items: center;
         cursor: pointer;
-        margin: 0 10px;
+        padding: 0 10px;
+        border-radius: 20px;
+        margin-bottom: 5px;
         font-size: 20px;
+        transition: background-color .3s ease;
+
+        &:hover {
+            background-color: lightgray;
+        }
     }
 
     &-Content {
