--- a/src/Components/MessageWrapper/MessageWrapper.scss
+++ b/src/Components/MessageWrapper/MessageWrapper.scss
@@ -1,7 +1,7 @@
 .MessageWrapper {
     position: fixed;
     bottom: 10px;
-    right: 10px;
+    left: 10px;
     overflow: hidden;
     display: flex;
     flex-direction: column-reverse;
