--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -7,25 +7,25 @@ body {
 .App {
     font-family: "Ysabeau Infant", sans-serif;
 
-    &-Header {
-        margin: 0;
-        display: block;
-        text-align: center;
-        margin-top: 20px;
-    }
-
     &-Select {
         margin-top: 40px;
     }
 
-    &-Span {
-        text-align: center;
-        font-size: 26px;
+    &-Header {
+        position: fixed;
+        z-index: 1;
+        width: 100%;
+        top: 0;
     }
 
     &-Upload {
         width: 200px;
         margin: auto;
+        margin-top: 170px;
+    }
+
+    &-Gallery {
+        margin-top: 155px;
     }
 }
 
