--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -2,4 +2,15 @@
     text-align: center;
     font-weight: normal;
     margin: 0;
+    background-color: white;
+    
+    &-Span{
+        font-size: 26px;
+    }
+
+    &-Line {
+        width: 100%;
+        border-bottom: black solid 2px;
+        margin: auto;
+    }
 }
