load: dnd on chrome browsers fix

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -4,6 +4,10 @@ body {
     margin: 0;
 }
 
+.disable-pointer-events {
+    pointer-events: none;
+}
+
 .App {
     font-family: "Ysabeau Infant", sans-serif;
 
