--- a/src/Components/Widget/Widget.scss
+++ b/src/Components/Widget/Widget.scss
@@ -13,10 +13,10 @@
 
     &-Header {
         height: 50px;
+        background-color: white;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        cursor: pointer;
         padding: 0 10px;
         border-radius: 20px;
         margin-bottom: 5px;
@@ -24,12 +24,23 @@
         transition: background-color .3s ease;
 
         &:hover {
-            background-color: lightgray;
+            cursor: move;
         }
     }
 
     &-Content {
         width: 650px;
         height: 650px;
+        cursor: default;
+    }
+
+    &-Arrow {
+        cursor: pointer;
+        border-radius: 10px;
+        padding: 2px;
+
+        &:hover {
+            background-color: rgb(235, 235, 235);
+        }
     }
 }
