--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,7 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Ysabeau+Infant:ital,wght@0,1..1000;1,1..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
     margin: 0;
+    background-image: url('./../Assets/Background.svg');
+    color: white;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 100;
+    font-style: normal;
 }
 
 .disable-pointer-events {
@@ -9,8 +15,6 @@ body {
 }
 
 .App {
-    font-family: "Ysabeau Infant", sans-serif;
-
     &-Select {
         margin-top: 40px;
     }
