--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -2,14 +2,23 @@
     text-align: center;
     font-weight: normal;
     margin: 0;
-    background-color: white;
+    background-color: rgba(21, 21, 21, 0.9);
+    height: 180px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    box-shadow: 0 0 10px 10px rgb(21, 21, 21, .9);
     
-    &-Span{
-        font-size: 26px;
+    &-Image {
+        height: 180px;
+        position: absolute;
+        left: 0;
+        top: 0;
     }
 
-    &-Line {
+    &-Span {
+        font-size: 28px;
         width: 100%;
-        border-bottom: black solid 2px;
+        text-align: center;
     }
 }
