--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -14,11 +14,20 @@
         position: absolute;
         left: 0;
         top: 0;
+
+        @media screen and (max-width: 1500px) {
+            display: none;
+        }
     }
 
     &-Span {
-        font-size: 28px;
+        font-size: 36px;
         width: 100%;
         text-align: center;
+        @media screen and (max-width: 420px) {
+            font-size: 26px;
+            margin-right: 30px;
+            margin-left: 30px;
+        }
     }
 }
