--- a/src/Components/Table/Table.scss
+++ b/src/Components/Table/Table.scss
@@ -1,9 +1,8 @@
-.Table {
-    margin: auto;
-    width: 100%;
-    height: 100%;
+// @import './../../Constants.scss';
 
-    &-Canvas {
-        border-radius: 20px;
-    }
-}
+// .Table {
+//     margin: auto;
+//     width: 100%;
+//     height: 100%;
+//     border-radius: $border-radius;
+// }
