--- a/src/Components/Image/Image.scss
+++ b/src/Components/Image/Image.scss
@@ -1,3 +1,5 @@
+@import './../../Constants.scss';
+
 .Image {
     position: relative;
 
@@ -12,7 +14,7 @@
         width: 100%;
         height: 100%;
         box-sizing: border-box;
-        border-radius: 10px;
+        border-radius: $border-radius;
         box-sizing: border-box;
     }
 
@@ -31,7 +33,7 @@
         position: absolute;
         inset: 0;
         border-radius: 20px;
-        background-color: #ffffff79;
+        background-color: $black-transparent;
         display: flex;
         justify-content: center;
         align-items: center;
