--- a/src/Components/UploadPage/UploadPage.scss
+++ b/src/Components/UploadPage/UploadPage.scss
@@ -1,3 +1,5 @@
+@import './../../Constants.scss';
+
 .UploadPage {
     width: 100vw;
     height: 100vh;
@@ -24,10 +26,10 @@
     }
 
     &-Button {
-        background-color: #151515;
+        background-color: $black;
         transition: background-color .5s;
         border: none;
-        border-radius: 10px;
+        border-radius: $border-radius;
         cursor: pointer;
         margin: auto;
         display: flex;
