--- a/src/Components/Widget/Widget.scss
+++ b/src/Components/Widget/Widget.scss
@@ -1,46 +1,44 @@
-.Widget {
-    position: fixed;
-    right: 5px;
-    bottom: 5px;
-    width: 650px;
-    z-index: 1;
-    background-color: white;
-    border-radius: 20px;
-    border: 2px black solid;
-    border-radius: 20px;
-    transition: 300ms;
-    overflow: hidden;
+// .Widget {
+//     position: fixed;
+//     right: 5px;
+//     bottom: 5px;
+//     width: 100%;
+//     z-index: 1;
+//     background-color: white;
+//     border-radius: 20px;
+//     border: 1px black solid;
+//     border-radius: 20px;
+//     transition: 300ms;
+//     overflow: hidden;
 
-    &-Header {
-        height: 50px;
-        background-color: white;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0 10px;
-        border-radius: 20px;
-        margin-bottom: 5px;
-        font-size: 20px;
-        transition: background-color .3s ease;
+//     &-Header {
+//         height: 50px;
+//         background-color: white;
+//         display: flex;
+//         justify-content: space-between;
+//         align-items: center;
+//         padding: 0 10px;
+//         border-radius: 20px;
+//         margin-bottom: 5px;
+//         font-size: 20px;
+//         transition: background-color .3s ease;
 
-        &:hover {
-            cursor: move;
-        }
-    }
+//         &:hover {
+//             cursor: move;
+//         }
+//     }
 
-    &-Content {
-        width: 650px;
-        height: 650px;
-        cursor: default;
-    }
+//     &-Content {
+//         cursor: default;
+//     }
 
-    &-Arrow {
-        cursor: pointer;
-        border-radius: 10px;
-        padding: 2px;
+//     &-Arrow {
+//         cursor: pointer;
+//         border-radius: 10px;
+//         padding: 2px;
 
-        &:hover {
-            background-color: rgb(235, 235, 235);
-        }
-    }
-}
+//         &:hover {
+//             background-color: rgb(235, 235, 235);
+//         }
+//     }
+// }
