--- a/src/Components/TableWidget/TableWidget.scss
+++ b/src/Components/TableWidget/TableWidget.scss
@@ -1,25 +1,30 @@
-// .react-draggable {
-//     position: fixed;
-//     z-index: 2;
-//     right: 0;
-//     bottom: 0;
-// }
+@import './../../Constants.scss';
 
-// .TableWidget {
-//     width: 500px;
-//     animation: fadeOut .5s;
-//     display: none;
+.react-draggable {
+    position: fixed;
+    z-index: 2;
+    right: 0;
+    bottom: 0;
+}
 
-//     &_isShown {
-//         animation: fadeIn .5s;
-//         display: block;
-//     }
-// }
+.TableWidget {
+    display: none;
+    padding: 10px;
+    margin: 10px;
+    background-color: white;
+    border-radius: $border-radius;
+    border: black solid 1px;
 
-// @keyframes fadeIn {
-//     from {
-//         opacity: 0;
-//     } to {
-//         opacity: 1;
-//     }
-// }
+    &_isShown {
+        animation: fadeIn .5s;
+        display: block;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    } to {
+        opacity: 1;
+    }
+}
