--- a/src/Components/Widget/Widget.scss
+++ b/src/Components/Widget/Widget.scss
@@ -1,44 +1,29 @@
-// .Widget {
-//     position: fixed;
-//     right: 5px;
-//     bottom: 5px;
-//     width: 100%;
-//     z-index: 1;
-//     background-color: white;
-//     border-radius: 20px;
-//     border: 1px black solid;
-//     border-radius: 20px;
-//     transition: 300ms;
-//     overflow: hidden;
+@import './../../Constants.scss';
 
-//     &-Header {
-//         height: 50px;
-//         background-color: white;
-//         display: flex;
-//         justify-content: space-between;
-//         align-items: center;
-//         padding: 0 10px;
-//         border-radius: 20px;
-//         margin-bottom: 5px;
-//         font-size: 20px;
-//         transition: background-color .3s ease;
+.Widget {
+    &-Header {
+        color: $black;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: 200;
+        gap: 5px;
+        user-select: none;
+        -moz-user-select: none;
+        -khtml-user-select: none;
+        -webkit-user-select: none;
+        -o-user-select: none;
 
-//         &:hover {
-//             cursor: move;
-//         }
-//     }
+        h3 {
+            margin: 10px;
+        }
+    }
 
-//     &-Content {
-//         cursor: default;
-//     }
+    &-Arrow {
+        cursor: pointer;
+    }
 
-//     &-Arrow {
-//         cursor: pointer;
-//         border-radius: 10px;
-//         padding: 2px;
-
-//         &:hover {
-//             background-color: rgb(235, 235, 235);
-//         }
-//     }
-// }
+    &-Content {
+        margin-top: 10px;
+    }
+}
