--- a/src/Components/Image/Image.scss
+++ b/src/Components/Image/Image.scss
@@ -32,7 +32,7 @@
     &-Loading {
         position: absolute;
         inset: 0;
-        border-radius: 20px;
+        border-radius: $border-radius;
         background-color: $black-transparent;
         display: flex;
         justify-content: center;
