--- a/src/Components/TableWidget/TableWidget.scss
+++ b/src/Components/TableWidget/TableWidget.scss
@@ -15,6 +15,11 @@
     border-radius: $border-radius;
     border: black solid 1px;
 
+    @media screen and (max-width: 420px) {
+        margin: 0;
+        border-radius: 0;
+    }
+
     &_isShown {
         animation: fadeIn .5s;
         display: block;
