--- a/src/Components/UploadButton/UploadButton.scss
+++ b/src/Components/UploadButton/UploadButton.scss
@@ -1,18 +1,20 @@
+@import './../../Constants.scss';
+
 .UploadButton {
     width: 100%;
     height: 100%;
 
     :hover {
         transition: background-color .3s ease;
-        background-color: lightgray;
+        background-color: $black-transparent;
     }
     
     &-Image {
         width: 100%;
         height: 100%;
         cursor: pointer;
-        border-radius: 20px;
-        border: black 2px solid;
+        border-radius: $border-radius;
+        border: white 2px dashed;
         box-sizing: border-box;
     }
 
