bug: dinamyc resizing

--- a/src/Components/Image/Image.scss
+++ b/src/Components/Image/Image.scss
@@ -52,7 +52,7 @@
             position: absolute;
             inset: 0px;
             border-radius: 50%;
-            border: 5px solid #000;
+            border: 5px solid white;
             animation: prixClipFix 2s linear infinite ;
         }
     }
