--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -8,6 +8,7 @@ body {
     font-optical-sizing: auto;
     font-weight: 100;
     font-style: normal;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .disable-pointer-events {
