--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -9,6 +9,12 @@ body {
     font-weight: 100;
     font-style: normal;
     -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
 }
 
 .disable-pointer-events {
