touch: fix hovers

--- a/src/Components/ImageButtons/ImageButtons.scss
+++ b/src/Components/ImageButtons/ImageButtons.scss
@@ -16,7 +16,13 @@
         height: 100%;
         opacity: .8;
 
-        &:hover {
+        @media (hover: hover) {    
+            &:hover {
+                opacity: 1;
+            }
+        }
+
+        &:active {
             opacity: 1;
         }
     }
