--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -8,13 +8,15 @@ body {
     font-optical-sizing: auto;
     font-weight: 100;
     font-style: normal;
-    -webkit-tap-highlight-color: transparent;
-    -webkit-touch-callout: none;
     -webkit-user-select: none;
      -khtml-user-select: none;
        -moz-user-select: none;
         -ms-user-select: none;
             user-select: none;
+}
+
+textarea, input, button, select, div, img, html, body, a {
+    -webkit-tap-highlight-color: transparent;
 }
 
 .disable-pointer-events {
