--- a/src/Components/DragAndDrop/DragAndDrop.scss
+++ b/src/Components/DragAndDrop/DragAndDrop.scss
@@ -2,6 +2,7 @@
     background-color: rgba($color: #000000, $alpha: .8);
     position: fixed;
     inset: 0;
+    z-index: 2;
 
     &-Border {
         position: absolute;
