--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -21,7 +21,14 @@ textarea, input, button, select, div, img, html, body, a {
 
 .App {
     &-Select {
-        margin-top: 40px;
+        margin: 220px 50px 20px 50px;
+        text-align: center;
+        font-size: 28px;
+        font-weight: 300;
+        @media screen and (max-width: 420px) {
+            margin-left: 20px;
+            margin-right: 10px;
+        }
     }
 
     &-Header {
@@ -35,13 +42,5 @@ textarea, input, button, select, div, img, html, body, a {
         width: 300px;
         margin: auto;
         margin-top: 170px;
-    }
-
-    &-Gallery {
-        margin: 220px 50px 20px 50px;
-        @media screen and (max-width: 420px) {
-            margin-left: 20px;
-            margin-right: 10px;
-        }
     }
 }
