--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import './../Constants.scss';
 
 body {
     margin: 0;
@@ -6,8 +7,6 @@ body {
     color: white;
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 100;
-    font-style: normal;
     -webkit-user-select: none;
      -khtml-user-select: none;
        -moz-user-select: none;
@@ -15,7 +14,7 @@ body {
             user-select: none;
 }
 
-textarea, input, button, select, div, img, html, body, a {
+button, div, img, html, body {
     -webkit-tap-highlight-color: transparent;
 }
 
