--- a/src/Components/UploadPage/UploadPage.scss
+++ b/src/Components/UploadPage/UploadPage.scss
@@ -10,19 +10,11 @@
         display: flex;
         flex-direction: column;
         margin: auto;
-        width: 500px;
+        width: 50%;
     }
 
     &-Text {
-        text-align: center;
-        font-size: 28px;
-        font-weight: 300;
-        margin-bottom: 30px;
-        @media screen and (max-width: 420px) {
-            font-size: 22px;
-            margin-right: 30px;
-            margin-left: 30px;
-        }
+        @include paragraph-font;        
     }
 
     &-Button {
