--- a/src/Components/UploadButton/UploadButton.scss
+++ b/src/Components/UploadButton/UploadButton.scss
@@ -1,36 +1,49 @@
 @import './../../Constants.scss';
 
 .UploadButton {
-    width: 100%;
-    height: 100%;
+    background-color: $black;
+    transition: background-color .5s;
+    border: white 1px solid;
+    border-radius: $border-radius;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0;
 
     @media (hover: hover) {
         &:hover {
-            transition: background-color .3s ease;
-            background-color: $black-transparent;
+            background-color: black;
+            transition: background-color .5s;
         }
     }
 
-    &:hover {
-        transition: background-color .3s ease;
-        background-color: $black-transparent;
+    &:active {
+        background-color: black;
+        transition: background-color .5s;
     }
 
-    &:active {
-        transition: background-color .3s ease;
-        background-color: $black-transparent;
+    &-Text {
+        color: white;
+        width: 100%;
+        padding: 5px;
+        @media (min-width:768px) {
+            padding: 15px;
+        }
+        @include paragraph-font;
     }
     
-    &-Image {
-        width: 100%;
-        height: 100%;
-        cursor: pointer;
-        border-radius: $border-radius;
-        border: white 2px dashed;
-        box-sizing: border-box;
+    &-Icon {
+        border-left: white solid 1px;
+        padding: 5px;
+        @media (min-width:768px) {
+            padding: 10px;
+        }
+        // Костыль: переменная для шрифтов используется для установки ширины иконки
+        width: calc(3.5 * $adaptive-font-size);
     }
 
-    &-Disabled{
+    &-Input {
         display: none;
     }
 }
