--- a/src/Components/MessageWrapper/MessageWrapper.scss
+++ b/src/Components/MessageWrapper/MessageWrapper.scss
@@ -1,18 +1,14 @@
 .MessageWrapper {
     position: fixed;
     bottom: 10px;
-    width: 500px;
-    left: calc(50% - 250px);
-    overflow: hidden;
+    min-width: 300px;
+    max-width: 800px;
+    width: 50%;
     display: flex;
     flex-direction: column-reverse;
     gap: 20px;
     overflow: hidden;
     z-index: 3;
-
-    @media screen and (max-width: 420px) {
-        width: calc(100% - 20px);
-        margin: 0 10px;
-        left: 0;
-    }
+    left: 50%;
+    transform: translate(-50%, 0);
 }
