--- a/src/Components/UploadImage/UploadImage.scss
+++ b/src/Components/UploadImage/UploadImage.scss
@@ -1,67 +1,36 @@
 @import './../../Constants.scss';
 
 .UploadImage {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
+    width: 100%;
+    height: 100%;
 
-    &-Content {
-        display: flex;
-        flex-direction: column;
-        margin: auto;
-        width: 50%;
+    @media (hover: hover) {
+        &:hover {
+            transition: background-color .3s ease;
+            background-color: $black-transparent;
+        }
     }
 
-    &-Text {
-        @include paragraph-font;        
+    &:hover {
+        transition: background-color .3s ease;
+        background-color: $black-transparent;
     }
 
-    &-Button {
-        background-color: $black;
-        transition: background-color .5s;
-        border: none;
-        border-radius: $border-radius;
+    &:active {
+        transition: background-color .3s ease;
+        background-color: $black-transparent;
+    }
+    
+    &-Image {
+        width: 100%;
+        height: 100%;
         cursor: pointer;
-        margin: auto;
-        display: flex;
-        align-items: center;
-        border: white 1px solid;
-        padding: 0;
-
-        @media (hover: hover) {
-            &:hover {
-                background-color: #000000;
-                transition: background-color .5s;
-            }
-        }
-
-        &:active {
-            background-color: #000000;
-            transition: background-color .5s;
-        }
+        border-radius: $border-radius;
+        border: white 2px dashed;
+        box-sizing: border-box;
     }
 
-    &-Span {
-        color: white;
-        font-size: 30px;
-        border-right: white solid 1px;
-        padding: 18px;
-        @media screen and (max-width: 420px) {
-            font-size: 22px;
-            padding: 16px;
-        }
-    }
-
-    &-Icon {
-        width: 64px;
-        padding: 5px;
-        @media screen and (max-width: 420px) {
-            width: 50px;
-        }
-    }
-
-    &-Input {
+    &-Disabled{
         display: none;
     }
 }
