design: change image to button on mobile

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -36,4 +36,8 @@ button, div, img, html, body {
         margin: auto;
         margin-top: 170px;
     }
+
+    &-UploadButton {
+        margin: auto;
+    }
 }
