--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,30 +1,29 @@
 @import './../../Constants.scss';
 
 .Header {
-    background-color: $black-transparent;
-    height: 15%;
+    background-color: $black;
+    height: 8%;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    box-shadow: 0 0 10px 10px $black-transparent;
-    
+
     &-Image {
+        margin-left: 20px;
+        transform: scale(1.5);
         height: 100%;
         position: absolute;
         left: 0;
         top: 0;
 
-        @media screen and (max-width: 1200px) {
+        @media screen and (max-width: 975px) {
             display: none;
         }
 
     }
-    
+
     &-Span {
         margin: 0 10px;
-        @media screen and (max-width: 1500px) {
-            max-width: 400px;
-        }
+
         @include header-font
     }
 }
